--- a/.github/workflows/Sonar.yml
+++ b/.github/workflows/Sonar.yml
@@ -56,5 +56,5 @@ jobs:
         shell: powershell
         run: |
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"211115-UTA-NET_TeamGreen-P2" /o:"211115-uta-net" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
-          dotnet clean build ./PurrcationAPI/PurrcationAPI.sln
+          dotnet build ./PurrcationAPI/PurrcationAPI.sln
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
